TAG: qcreports_db-4-4-0-21
DATE: 11/23/2010
STAFF: lec
CHANGES:
1) mgd/ALL_UncodedReference.py 
   add TAB after column 1

TAG: qcreports_db-4-4-0-20
DATE: 11/16/2010
STAFF: lec
CHANGES:
1) TR10451/retire
   GXD_SpecNoImage.sql
   GXD_SpecImageDiffFigure.sql

TAG: qcreports_db-4-4-0-19
DATE: 11/16/2010
STAFF: lec
CHANGES:
1) TR10458/remove copy of :/data/seqdbs/blast/gb/gbmusnomen/gbmusnomen
   to /usr/local/mgi/private/www/hugo/gbmusnomen

TAG: qcreports_db-4-4-0-18
TAG: qcreports_db-4-4-0-17
TAG: qcreports_db-4-4-0-16
DATE: 11/02/2010/ 11/11/2010
STAFF: lec
CHANGES:
1) TR10437/GO_stats.py
2) temporarly removed HMD_SymbolDiffs2 until we can
   resolved whether this report is actually used
   HMD_SymbolDiffs.py (HMD_SymbolDiffs2, HMD_SymbolDiffs4)

TAG: qcreports_db-4-4-0-15
TAG: qcreports_db-4-4-0-14
DATE: 11/02/2010
STAFF: lec
CHANGES:
1) TR10434/archive/remove cleanup

2) moved to monthly
   SEQ_RepTransGenomic.py
   GXD_GenotypeHemi.sql
   GXD_KnockInGene.sql
   GXD_DupPrimers.sql
   GXD_SeqID.py
   PRB_Reference.sql
   GXD_Transgenic.py

3) moved to weekly

   GXD_NonGeneMarkers.py
   GXD_FullCode.py
   GXD_GenotypeNA.sql
   GXD_GelBand.py
   GXD_SpecNoImage.sql
   GXD_SpecImageDiffFigure.sql
   GXD_NoSequence.py

4) archived (64)

   ALL_GeneTrap.py
   MRK_MarkerClip.sql
   ALL_Priority.py
   ALL_ImmuneAnnot.py
   ALL_TransgeneDiff.sql

   MLD_Chromosome.sql
   MLD_Cross.sql
   MLD_DupMarker.sql
   MLD_Marker.sql
   MLD_NomenText.sql

   PRB_CellLine.sql
   PRB_Tissue.sql
   PRB_NoGenBank.sql
   PRB_NoMarkerSeq.sql
   MGI_ProblemSequence.py

   MRK_OffsetsMLDP.sql
   MRK_Offsets.sql
   MRK_OffsetsUN.sql
   MRK_MappedNoRef.sql
   MRK_Matrix.sql
   MRK_LowerSeq.sql
   MRK_AssigningRef.py
   MRK_MGC.sql
   MRK_NoSequence.py
   MRK_TranscriptNoSP.sql

   HMD_References2.sql
   HMD_References5.sql
   HMD_SpeciesCount.sql
   HMD_Duplicates
   HMD_ConservedUN
   HMD_NoMouseSeq.sql
   HMD_MouseSeq1.py
   HMD_MouseSeq2.sql
   HMD_NoMouse.sql
   HMD_HomoloGene1.sql